--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mongodb": "2.2.25",
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.0",
+    "jimp": "0.2.27",
+    "multer": "1.3.0",
+    "uuid": "3.0.1"
   },
   "devDependencies": {},
   "scripts": {
