--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
-    "mongodb": "2.2.25",
-    "nodemon": "^1.19.0",
     "jimp": "0.2.27",
+    "mongodb": "2.2.25",
     "multer": "1.4.1",
+    "nodemon": "^1.19.0",
     "uuid": "3.0.1"
   },
   "devDependencies": {},
